# obs-studio

./: .gitignore  make-and-install-cmio-plugin.sh  r
mac-vcam-plugin-pkg/: README.txt  install-mac-vcam-plugin.sh
plugins/: CMakeLists.txt
plugins/mac-cmio/: CMakeLists.txt  plugin-main.c  plugin-main.cpp
plugins/mac-cmio/CoreAudio/PublicUtility/: CAPropertyAddress.h
plugins/mac-cmio/CoreMediaIO/DeviceAbstractionLayer/Devices/DP/Base/: CMIO_DP_Property.cpp
plugins/mac-cmio/CoreMediaIO/DeviceAbstractionLayer/Devices/Sample/Assistant/Server/: CMIO_DPA_Sample_Server_MIGInterface.cpp  CMIO_DPA_Sample_Server_VCamAssistant.cpp  CMIO_DPA_Sample_Server_VCamAssistant.h
plugins/mac-cmio/CoreMediaIO/DeviceAbstractionLayer/Devices/Sample/Assistant/Server/Device/: CMIO_DPA_Sample_Server_VCamDevice.cpp  CMIO_DPA_Sample_Server_VCamDevice.h  CMIO_DPA_Sample_Server_VCamInputStream.cpp
plugins/mac-cmio/CoreMediaIO/PublicUtility/: CMIO_PropertyAddress.h
plugins/mac-cmio/data/locale/: en-US.ini
